Fix footer action button wrap. (#335)

--- a/components/byu-footer-action-button/byu-footer-action-button-common.scss
+++ b/components/byu-footer-action-button/byu-footer-action-button-common.scss
@@ -9,8 +9,8 @@
     color: $white;
     display: inline-block;
     text-align: center;
-    line-height: 2.1em;
-    height: 45px;
+    line-height: 20px;
+    padding: 13px 0;
     width: auto;
     min-width: 125px;
     margin: 10px 0 20px 0;
